[project]
name = "codebase"
version = "0.1.0"
description = "Code semantic database for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.1",
    "ollama>=0.6.1",
    "typer>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
codebase = "codebase.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase"]

[tool.ruff]
line-length = 80